<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/searchFilterFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/chatListFragment"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/nav_chats" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
